--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "eslint": "9.16.0",
     "eslint-config-next": "15.0.4",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.8.4",
     "next": "15.0.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-icons": "^5.4.0"
   }
 }
